Added registeration for voters.

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
     <nav>
       <a href="/add-candidates">Add Candidate</a>
+      <a href="/add-voters">Register Voter</a>
       <a href="/">Introduction</a>
     </nav>
 
