--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -3,11 +3,11 @@
 
 <h1>RCV Example Election</h1>
 
-<p>I really don't know what the fuck I'm doing here to be honest.
-  Anyways, do all this shit or go die.
+<p>A running example of a Ranked Chocie Voting election.
 </p>
 
 <a href="/add-candidates"> 1: Add Candidates</a>
+<a href="/add-voters">2: Register Voters</a>
 
 <h2>Candidates</h4>
 <ul>
